pattern-wishcast/tests/ui/unsupported_generic_field.stderr
error: Unsupported field type: HashMap containing Value types. Only Vec<T>, Box<T>, and Option<T> are supported for generic containers. Use #[unsafe_transmute_check(iter="...")] to provide custom checking.
  --> tests/ui/unsupported_generic_field.rs:10:1
   |
10 | / pattern_wishcast! {
11 | |     enum StuckEvaluation = {
12 | |         Var { id: usize },
13 | |     };
...  |
25 | |     impl StrictValue : FlexValue;
26 | | }
   | |_^
   |
   = note: this error originates in the macro `pattern_wishcast` (in Nightly builds, run with -Z macro-backtrace for more info)
